2002-04-26  Mikhael Goikhman  <migo@homemail.com>

	* NEWS, configure.in:
	changed version to 2.5.2

2002-04-25  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.1:
	improved main headers, added new COLORSETS section;
	documented State condition

	* NEWS:
	documented Tint in colorsets and utility renaming

	* libs/Flocale.c:
	corrected several error reporting problems

2002-04-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.h:
	fixed leaving tear off menus

2002-04-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (border_draw_part_relief):
	(border_set_button_pixmap):
	(border_draw_title_stick_lines):
	(border_draw_title_mono):
	(border_draw_title_relief):
	* libs/fvwmlib.h (RelieveRectangle2):
	(RelieveRectangle):
	replaced functions by macros

	* libs/Graphics.c (do_relieve_rectangle):
	applied performance patch by Dave Trollope

2002-04-24  Mikhael Goikhman  <migo@homemail.com>

	* libs/FBidi.c:
	* libs/FBidi.h:
	* libs/Flocale.c:
	* libs/Flocale.h:
	* libs/FlocaleCharset.c:
	FBidi is now independent from Flocale* again;
	iso8859-6.8x fonts recognized now as bidi-enabled

2002-04-23  Mikhael Goikhman  <migo@homemail.com>

	* libs/Flocale.c:
	fixed --disable-multibyte

2002-04-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (border_draw_title_deep):
	(border_set_title_pixmap):
	(border_set_button_pixmap):
	fixed SolidButton title and button style

2002-04-23  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.1:
	* NEWS:
	* AUTHORS:
	added new entry about CurrentAtEnd

	* colorset.c:
	minor reformatting and spell checking

2002-04-23  Jochen Klenner  <jochen.klenner@gmx.net>

	* fvwm/windowlist.c (CMD_WindowList):
	Added new Windowlist option CurrentAtEnd

2002-04-22  olicha  <olivier.chapuis@free.fr>

	* fvwm/colorset.c (parse_colorset):
	* libs/Colorset.h:
	Fixed an enormous core dump which comes from a cvs merging problem

	* fvwm/Makefile.am:
	* acconfig.h:
	* configure.in:
	Added Xrender detection and link fvwm if needed
